--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -7,6 +7,9 @@
         <variable
             name="artist"
             type="com.neeplayer.model.Artist"/>
+        <variable
+            name="artistImageUrl"
+            type="String"/>
     </data>
 
     <LinearLayout
@@ -26,7 +29,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:scaleType="centerCrop"
-            app:imageURL="@{artist.imageURL}"
+            app:imageURL="@{artistImageUrl}"
             android:id="@+id/artist_image" />
 
         <LinearLayout
