--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -47,107 +47,111 @@
                     tools:src="@color/image_alt"
                     tools:layout_height="360dp" />
 
-                    <SeekBar
-                        android:id="@+id/np_seek_bar"
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:progress="@{progress}"
-                        android:max="@{song.duration}" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="-8dp"
-                        android:orientation="horizontal">
+                    <TextView
+                        style="@style/Text.Regular"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:padding="8dp"
+                        android:paddingBottom="0dp"
+                        app:duration="@{progress}"
+                        tools:text="12:23" />
 
-                        <TextView
-                            style="@style/Text.Regular"
-                            android:paddingStart="8dp"
-                            app:duration="@{progress}"
-                            tools:text="0:23" />
-
-                        <Space
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1" />
-
-                        <TextView
-                            style="@style/Text.Regular"
-                            android:paddingEnd="8dp"
-                            app:duration="@{song.duration}"
-                            tools:text="4:12" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:paddingStart="8dp"
-                            android:paddingEnd="8dp"
-                            android:gravity="center">
-
-                            <TextView
-                                style="@style/Text.Title"
-                                android:layout_width="match_parent"
-                                android:textSize="22sp"
-                                android:gravity="center"
-                                android:text="@{song.title}"
-                                tools:text="The Weather Report Suite"
-                                android:id="@+id/np_song_title" />
-
-                            <TextView
-                                style="@style/Text.Regular"
-                                android:layout_width="match_parent"
-                                android:textSize="18sp"
-                                android:gravity="center"
-                                android:text="@{song.album.artist.name + ` – ` + song.album.title}"
-                                tools:text="Jack White – Lazaretto"
-                                android:id="@+id/np_artist_and_album" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:gravity="center">
-
-                            <ImageButton
-                                android:id="@+id/np_fast_rewind"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                style="?android:attr/borderlessButtonStyle"
-                                android:src="@drawable/ic_fast_rewind_black_48dp" />
-
-                            <ImageButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                style="?android:attr/borderlessButtonStyle"
-                                app:drawable="@{paused ? @drawable/ic_play_arrow_black_48dp : @drawable/ic_pause_black_48dp}"
-                                tools:src="@drawable/ic_pause_black_48dp"
-                                android:id="@+id/np_play_pause" />
-
-                            <ImageButton
-                                android:id="@+id/np_fast_forward"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                style="?android:attr/borderlessButtonStyle"
-                                android:src="@drawable/ic_fast_forward_black_48dp" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
+                    <TextView
+                        style="@style/Text.Regular"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:padding="8dp"
+                        android:paddingBottom="0dp"
+                        app:duration="@{song.duration}"
+                        tools:text="14:12" />
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:gravity="center">
+
+                        <TextView
+                            style="@style/Text.Title"
+                            android:layout_width="match_parent"
+                            android:textSize="22sp"
+                            android:gravity="center"
+                            android:text="@{song.title}"
+                            tools:text="The Weather Report Suite"
+                            android:id="@+id/np_song_title" />
+
+                        <TextView
+                            style="@style/Text.Regular"
+                            android:layout_width="match_parent"
+                            android:textSize="18sp"
+                            android:gravity="center"
+                            android:text="@{song.album.artist.name + ` – ` + song.album.title}"
+                            tools:text="Jack White – Lazaretto"
+                            android:id="@+id/np_artist_and_album" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <ImageButton
+                            android:id="@+id/np_fast_rewind"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="?android:attr/borderlessButtonStyle"
+                            android:src="@drawable/ic_fast_rewind_black_48dp" />
+
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="?android:attr/borderlessButtonStyle"
+                            app:drawable="@{paused ? @drawable/ic_play_arrow_black_48dp : @drawable/ic_pause_black_48dp}"
+                            tools:src="@drawable/ic_pause_black_48dp"
+                            android:id="@+id/np_play_pause" />
+
+                        <ImageButton
+                            android:id="@+id/np_fast_forward"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="?android:attr/borderlessButtonStyle"
+                            android:src="@drawable/ic_fast_forward_black_48dp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <SeekBar
+                android:id="@+id/np_seek_bar"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginTop="352dp"
+                android:padding="0dp"
+                android:progress="@{progress}"
+                android:max="@{song.duration}" />
+
 
             <RelativeLayout
                 android:id="@+id/np_collapsed"
