--- a/app/src/main/res/layout/fragment_artist.xml
+++ b/app/src/main/res/layout/fragment_artist.xml
@@ -4,4 +4,4 @@
     android:id="@+id/album_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.MainActivity" />
+    tools:context=".ui.MainActivity" />
