--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -102,7 +102,7 @@
                             android:layout_width="match_parent"
                             android:textSize="18sp"
                             android:gravity="center"
-                            android:text="@{song.album.artist.name + ` – ` + song.album.title}"
+                            android:text="@{@string/now_playing_artist_album(song.album.artist.name, song.album.title)}"
                             tools:text="Jack White – Lazaretto"
                             android:id="@+id/np_artist_and_album" />
 
