Another icon update & AGP bump

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -7,12 +7,8 @@
       android:scaleY="0.61"
       android:translateX="21.06"
       android:translateY="21.06">
-    <group>
-      <clip-path
-          android:pathData="M0,0h108v108h-108z"/>
-      <path
-          android:pathData="M25.738,36.088C26.024,30.828 21.155,24.48 16,23.393L17.524,22.331C22.595,20.903 29.853,24.268 32.04,29.061C34.227,33.854 43.671,42.012 53.813,39.156C63.955,36.301 76.284,38.238 82.845,52.617L83.06,53.005C88.171,62.245 88.657,63.123 100,72C111.5,81 143,76.5 126,103.5C109,130.5 103.5,122.5 103.5,122.5H57.5L59.822,80.521C60.679,64.74 50.655,57.305 40.346,55.131C30.036,52.956 25.453,41.348 25.738,36.088Z"
-          android:fillColor="#FFC107"/>
-    </group>
+    <path
+        android:pathData="M30.898,24.422H43.516L66.445,64.617V24.422H77.656V82H65.625L42.109,41.102V82H30.898V24.422Z"
+        android:fillColor="#FFC107"/>
   </group>
 </vector>
