--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -28,7 +28,7 @@
             android:layout_height="100dp"
             android:background="@color/image_alt"
             android:scaleType="centerCrop"
-            app:imagePath="@{album.art}"
+            app:imageUri="@{album.art}"
             android:id="@+id/album_art"/>
 
         <LinearLayout
