--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -26,7 +26,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:scaleType="centerCrop"
-            app:imageURL="@{artist.imageUrl}"
+            app:imageUri="@{artist.imageUrl}"
             android:id="@+id/artist_image" />
 
         <LinearLayout
